# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
name = Airflow
summary = Airflow is a system to programmatically author, schedule and monitor data pipelines.
description-file = README.md
author = Apache Airflow PMC
author-email = dev@airflow.apache.org
license = Apache License, Version 2.0
license_files =
   LICENSE
   NOTICE
# Start of licenses generated automatically
   licenses/LICENSE-bootstrap-toggle.txt
   licenses/LICENSE-bootstrap.txt
   licenses/LICENSE-bootstrap3-typeahead.txt
   licenses/LICENSE-d3-tip.txt
   licenses/LICENSE-d3js.txt
   licenses/LICENSE-dagre-d3.txt
   licenses/LICENSE-datatables.txt
   licenses/LICENSE-elasticmock.txt
   licenses/LICENSE-eonasdan-bootstrap-datetimepicker.txt
   licenses/LICENSE-flask-kerberos.txt
   licenses/LICENSE-hue.txt
   licenses/LICENSE-jqclock.txt
   licenses/LICENSE-jquery.txt
   licenses/LICENSE-moment-strftime.txt
   licenses/LICENSE-moment.txt
   licenses/LICENSE-normalize.txt
   licenses/LICENSE-python-nvd3.txt
   licenses/LICENSE-python-slugify.txt
# End of licences generated automatically

[bdist_wheel]
universal=1

[files]
packages = airflow

[easy_install]

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins =
  airflow.mypy.plugin.decorators

[mypy-airflow.migrations.*]
ignore_errors = True

[mypy-airflow._vendor.*]
ignore_errors = True

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party=airflow,tests
multi_line_output=5
# Need to be consistent with the exclude config defined in pre-commit-config.yaml
skip=airflow/_vendor,build,.tox,venv
